--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==5.1.1
 Django==5.0.4
 executing==2.0.1
 filelock==3.13.1
+fonttools==4.49.0
 fsspec==2024.2.0
 google-api-core==2.17.1
 google-api-python-client==2.118.0
